# GeometricArcader

./: .gitignore  CMakeLists.txt  CMakeSettings.json
CustomFontRenderer/: CMakeLists.txt  imgui.ini
CustomFontRenderer/src/Application/: FontRendererApp.cpp  FontRendererApp.h
CustomFontRenderer/src/Application/Layers/: MainLayer.cpp  MainLayer.h
CustomFontRenderer/src/CameraControllers/: OrthoCamController.cpp  OrthoCamController.h
CustomFontRenderer/src/Parser/: Font.cpp  Font.h
CustomFontRenderer/src/Parser/FileManipulation/: ByteReader.cpp  ByteReader.h  ByteWriter.cpp  ByteWriter.h  FontReader.cpp  FontReader.h
CustomFontRenderer/src/Parser/FontHelpers/: FontData.cpp  FontData.h  FontStructs.cpp  FontStructs.h  GlyphHelpers.h
CustomFontRenderer/src/Renderer/: FontRenderer.cpp  FontRenderer.h
Engine/: CMakeLists.txt
Engine/assets/shaders/: renderer2DCircle.glsl  renderer2DPoint.glsl  renderer2DQuad.glsl
Engine/assets/shaders/Unused/: basicShader.glsl  flatColor.glsl  texture.glsl
Engine/src/: Engine.h  enginepch.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Assert.h  Base.h  EngineDefines.h  EntryPoint.h  FrameTimer.cpp  FrameTimer.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerContainer.cpp  LayerContainer.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Structs.cpp  Structs.h  Window.cpp  Window.h
Engine/src/Engine/Debug/: Instrumentor.h
Engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/Math/: Math.cpp  Math.h  Random.cpp  Random.h
Engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  RenderUtils2D.cpp  RenderUtils2D.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
GeometricArcader/: CMakeLists.txt
GeometricArcader/src/: Game.cpp  Game.h
GeometricArcader/src/Application/: GEOArcaderApp.cpp  GEOArcaderApp.h  Game.cpp  Game.h  MainLayer.cpp  MainLayer.h
GeometricArcader/src/Application/Layers/: MainLayer.cpp  MainLayer.h
GeometricArcader/src/Camera/: DefaultCamera.cpp  DefaultCamera.h
GeometricArcader/src/Collision/: BorderCollision.cpp  BorderCollision.h  Collision.cpp  Collision.h  Collision2D.cpp  Collision2D.h
GeometricArcader/src/Entities/: Player.cpp  Player.h
GeometricArcader/src/Entities/Enemy/: Enemy.cpp  Enemy.h
GeometricArcader/src/Entities/Player/: EnergyBar.cpp  EnergyBar.h  Player.cpp  Player.h  SpeedController.cpp
GeometricArcader/src/FlyFishTools/: FlyFishUtils.cpp  FlyFishUtils.h
GeometricArcader/src/GameStates/: EndScreen.cpp  EndScreen.h  Game.cpp  Game.h  IGameState.h  StartScreen.cpp  StartScreen.h
GeometricArcader/src/Pickups/: Pickup.cpp  Pickup.h  UltraPickup.cpp  UltraPickup.h
GeometricArcader/src/Pillar/: Pillar.cpp  Pillar.h
GeometricArcader/src/Player/: EnergyBar.cpp  EnergyBar.h  Player.cpp  Player.h  SpeedController.cpp  SpeedController.h
GeometricArcader/src/UI/: SpeedController.cpp
GeometricArcader/src/UI/General/: ImageUI.cpp  ImageUI.h  ProgressBar.cpp  ProgressBar.h  UI.h
SandBox/: CMakeLists.txt  imgui.ini
SandBox/assets/shaders/: test.glsl
SandBox/src/: SandboxApp.cpp  SandboxApp.h
SandBox/src/CameraControllers/: OrthoCamController.cpp  OrthoCamController.h
SandBox/src/Layers/: GeometryShaderLayer.cpp  GeometryShaderLayer.h  SandboxMainLayer.cpp  SandboxMainLayer.h  SandboxTestLayer2D.cpp  SandboxTestLayer2D.h
